<resources>
    <string name="app_name">CST438_Project01_Starter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="mainUsernameHint">Enter Username</string>
    <string name="mainPasswordHint">Enter Password</string>
    <string name="mainSubmitButton">Sign in or Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="yes">Success</string>
    <string name="no">Fail</string>
    <string name="register">register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="intro">The button below shows how to link to song lyrics from within the app.\n
    If the lyrics plugin is already installed, pressing the button will show the lyrics.\n
    If the plugin is not yet installed, the user is directed to the download page.\n
    The lyrics plugin also monitors on-device player and scrobbling activities, displaying a notification everytime a lyrics is identified.
    </string>
    <string name="show_lyrics">Press the button below to show the lyrics for the song &quot;Let it be&quot; by The Beatles</string>
    <string name="load_lyrics">View the Lyrics</string>
    <string name="hintText">Enter some lyrics</string>
    <string name="headerText">Lyric Searcher</string>
    <string name="searchText">Search</string>
    <string name="playlistbtn">Button</string>
    <string name="artist">TextView</string>
</resources>